--- a/index.html
+++ b/index.html
@@ -8,27 +8,38 @@
   
   <title>Frontend Mentor | Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+  <main>
+    <div class="wrapper">
+      <div class="profile">
+        <img src="assets/images/avatar-jessica.jpeg" alt="profile picture" width="176" height="176">
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+        <h1 class="profile-name">Jessica Randall</h1>
+        <p class="profile-location"><strong>London, United Kingdom</strong></p>
+        <p class="profile-designation">"Front-end developer and avid reader."</p> 
+      </div>
+
+      <div class="links">
+        <a href="#" class="link-one">GitHub</a>
+        <a href="#" class="link-two">Frontend Mentor</a>
+        <a href="#" class="link-three">LinkedIn</a>
+        <a href="#" class="link-four">Twitter</a>
+        <a href="#" class="link-five">Instagram</a>
+      </div>
+    </div>
+  </main>  
+
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/frost3dWave">frost3dWave</a>.
+    </div>
+  </footer>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
