--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   
   <title>Frontend Mentor | Social links profile</title>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="style.css">
 
 </head>
@@ -17,7 +21,7 @@
   <main>
     <div class="wrapper">
       <div class="profile">
-        <img src="assets/images/avatar-jessica.jpeg" alt="profile picture" width="176" height="176">
+        <img src="assets/images/avatar-jessica.jpeg" alt="profile picture" width="176" height="176" class="profile-pic">
 
         <h1 class="profile-name">Jessica Randall</h1>
         <p class="profile-location"><strong>London, United Kingdom</strong></p>
@@ -25,11 +29,11 @@
       </div>
 
       <div class="links">
-        <a href="#" class="link-one">GitHub</a>
-        <a href="#" class="link-two">Frontend Mentor</a>
-        <a href="#" class="link-three">LinkedIn</a>
-        <a href="#" class="link-four">Twitter</a>
-        <a href="#" class="link-five">Instagram</a>
+        <button><a href="#" class="link-one">GitHub</a></button>
+        <button><a href="#" class="link-two">Frontend Mentor</a></button>
+        <button><a href="#" class="link-three">LinkedIn</a></button>
+        <button><a href="#" class="link-four">Twitter</a></button>
+        <button><a href="#" class="link-five">Instagram</a></button>
       </div>
     </div>
   </main>  
