removed the buttons tag surrounding anchor tags

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       </div>
 
       <div class="links">
-        <button><a href="#" class="link-one">GitHub</a></button>
-        <button><a href="#" class="link-two">Frontend Mentor</a></button>
-        <button><a href="#" class="link-three">LinkedIn</a></button>
-        <button><a href="#" class="link-four">Twitter</a></button>
-        <button><a href="#" class="link-five">Instagram</a></button>
+        <a href="#" class="link-one">GitHub</a>
+        <a href="#" class="link-two">Frontend Mentor</a>
+        <a href="#" class="link-three">LinkedIn</a>
+        <a href="#" class="link-four">Twitter</a>
+        <a href="#" class="link-five">Instagram</a>
       </div>
     </div>
   </main>  
