updated the links section to use `ul` instead

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <p class="profile-designation">"Front-end developer and avid reader."</p> 
       </div>
 
-      <div class="links">
-        <a href="#" class="link-one">GitHub</a>
-        <a href="#" class="link-two">Frontend Mentor</a>
-        <a href="#" class="link-three">LinkedIn</a>
-        <a href="#" class="link-four">Twitter</a>
-        <a href="#" class="link-five">Instagram</a>
-      </div>
+        <ul class="links">
+          <li><a href="#" class="link-one">GitHub</a></li>
+          <li><a href="#" class="link-two">Frontend Mentor</a></li>
+          <li><a href="#" class="link-three">LinkedIn</a></li>
+          <li><a href="#" class="link-four">Twitter</a></li>
+          <li><a href="#" class="link-five">Instagram</a></li>
+        </ul> 
     </div>
   </main>  
 
